tests/ui/issues/issue-42796.stderr
error[E0382]: borrow of moved value: `s`
  --> $DIR/issue-42796.rs:18:20
   |
LL |     let s = "Hello!".to_owned();
   |         - move occurs because `s` has type `String`, which does not implement the `Copy` trait
LL |     let mut s_copy = s;
   |                      - value moved here
...
LL |     println!("{}", s);
   |     ---------------^-
   |     |              |
   |     |              value borrowed here after move
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let mut s_copy = s.clone();
   |                       ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
